<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/readingFragment"
        android:icon="@drawable/ic_tab_reading"
        android:title="@string/tab_reading" />
    <item
        android:id="@+id/shelfFragment"
        android:icon="@drawable/ic_tab_shelf"
        android:title="@string/tab_shelf" />
    <item
        android:id="@+id/cloudFragment"
        android:icon="@drawable/ic_tab_cloud"
        android:title="@string/tab_cloud" />
    <item
        android:id="@+id/vipFragment"
        android:icon="@drawable/ic_tab_vip"
        android:title="@string/tab_vip" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_tab_account"
        android:title="@string/tab_account" />

</menu>
