<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_sheet_top"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/sheet_online"
        style="@style/ImportSheetItem"
        android:text="@string/import_online" />

    <View style="@style/ImportSheetDivider" />

    <TextView
        android:id="@+id/sheet_wifi"
        style="@style/ImportSheetItem"
        android:text="@string/import_wifi" />

    <View style="@style/ImportSheetDivider" />

    <TextView
        android:id="@+id/sheet_local"
        style="@style/ImportSheetItem"
        android:text="@string/import_local" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#F2F2F2" />

    <TextView
        android:id="@+id/sheet_cancel"
        style="@style/ImportSheetItem"
        android:text="@string/action_cancel" />

</LinearLayout>
